paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_4/sample_003/target.compile.log
warning: type `fv` should have an upper camel case name
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_4/sample_003/target.rs:4:6
  |
4 | type fv = fn(i32);
  |      ^^ help: convert the identifier to upper camel case (notice the capitalization): `Fv`
  |
  = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: type `pfv` should have an upper camel case name
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_4/sample_003/target.rs:5:6
  |
5 | type pfv = fv;
  |      ^^^ help: convert the identifier to upper camel case: `Pfv`

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_4/sample_003/target.rs:7:14
  |
7 | static HITS: RefCell<i32> = RefCell::new(0);
  |              ^^^^^^^^^^^^ `RefCell<i32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<i32>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
  = note: shared static variables must have a type that implements `Sync`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.